Day 19 part 2.